<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"
        android:textSize="40sp"

        />

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_temp"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/txt_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_presion"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/txt_pres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_humedad"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/txt_hum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_pronostico"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/txt_pronostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_reload"
        />

</TableLayout>
